<resources>
    <string name="app_name">Perro Land</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="SignIn">Sign In</string>
    <string name="Tituloname">PerroLandia</string>
    <string name="title_activity_principal">Principal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="privacidad">Privacidad</string>
    <string name="email" />
    <string name="btn_email">Email</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="foto_perfil">Foto Perfil</string>
    <string name="pass">Contraseña</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="cuenta">Cuenta</string>
    <string name="config">Configuración</string>
    <string name="datos_incorrectos">Datos incorrectos</string>
    <string name="name">Nombre</string>
    <string name="Name">Nombre</string>
    <string name="Correo">E-Mail</string>
    <string name="Contraseña">Contraseña</string>
    <string name="register">Register</string>
    <string name="Entra">Entra</string>
    <string name="pass_corta">Contraseña corta</string>
    <string name="sharedpreferences_file">fichero configuración</string>
    <string name="sesion_cerrada">cerrar sesiion</string>
    <string name="nombre_actualizado">Nombre actualizado</string>
    <string name="password_actualizada">Contraseña actualizada</string>
    <string name="tu_nombre">Tu nombre</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="dialog_privacidad_txt">Privacidad</string>
    <string name="privacidad_txt">Politica de privacidad</string>
    <string name="nuevo_email">Nuevo correo</string>
</resources>